@@ -191,6 +191,26 @@
 
               <li>
                 <p>
+                  [Sep, 2025] Our paper "Advantage of Deterministic Entanglement Transmission on Gaussian-State Quantum Networks" is published in Journal of Physics Complexity
+(<a href="https://doi.org/10.1088/2632-072X/ae0971" target="_blank">doi.org/10.1088/2632-072X/ae0971</a>).
+Congratulations to Yaqi!
+
+
+                </p>
+              </li>
+
+              <li>
+                <p>
+                  [Aug, 2025] Just presented our work "Revealing the Local Design Principles of Physical Networks through Surface Optimisation" at the
+<a href="https://www.nitmb.org/nitmb-mathbio-convergence-conference" target="_blank">NITMB mathbio convergence conference</a>.
+Love Chicago! (I am back!)
+
+
+                </p>
+              </li>
+
+              <li>
+                <p>
                   [Mar, 2025] Our paper "Nonconvex entanglement monotone determining the characteristic length of entanglement distribution in continuous-variable quantum networks" is published in Physical Review A
 (<a href="https://doi.org/10.1103/PhysRevA.111.042429" target="_blank">doi.org/10.1103/PhysRevA.111.042429</a>).
 Congratulations to Yaqi!
@@ -214,28 +234,6 @@ Congratulations to Xinqi and Gaogao!
                   [Jan, 2025] Our paper "Path Percolation in Quantum Communication Networks" is featured in
 <a href="https://phys.org/" target="_blank">phys.org</a>:
 <a href="https://phys.org/news/2025-01-physicists-bridge-strategy-stabilize-quantum.html" target="_blank">Physicists propose 'bridge' strategy to stabilize quantum networks</a>
-
-
-                </p>
-              </li>
-
-              <li>
-                <p>
-                  [Jan, 2025] Our paper
-"<a href="https://doi.org/10.1103/PhysRevLett.134.030803" target="_blank">Path Percolation in Quantum Communication Networks</a>"
-is published in Physical Review Letters.
-I am grateful for the contributions of my former lab collaborator, Bingjie,
-my advisor, István, and Balázs, whose mathematical expertise was essential.
-
-
-                </p>
-              </li>
-
-              <li>
-                <p>
-                  [Jan, 2025] It was pleasant to present our work "Multipartite entanglement routing
-as a hypergraph immersion problem" at
-<a href="https://www.ddays.org/2025/index.html" target="_blank">Dynamics Days US 2025</a>.
 
 
                 </p>
