@@ -111,6 +111,26 @@
 
               <li>
                 <p>
+                  [Sep, 2025] Our paper "Advantage of Deterministic Entanglement Transmission on Gaussian-State Quantum Networks" is published in Journal of Physics Complexity
+(<a href="https://doi.org/10.1088/2632-072X/ae0971" target="_blank">doi.org/10.1088/2632-072X/ae0971</a>).
+Congratulations to Yaqi!
+
+
+                </p>
+              </li>
+  
+              <li>
+                <p>
+                  [Aug, 2025] Just presented our work "Revealing the Local Design Principles of Physical Networks through Surface Optimisation" at the
+<a href="https://www.nitmb.org/nitmb-mathbio-convergence-conference" target="_blank">NITMB mathbio convergence conference</a>.
+Love Chicago! (I am back!)
+
+
+                </p>
+              </li>
+  
+              <li>
+                <p>
                   [Mar, 2025] Our paper "Nonconvex entanglement monotone determining the characteristic length of entanglement distribution in continuous-variable quantum networks" is published in Physical Review A
 (<a href="https://doi.org/10.1103/PhysRevA.111.042429" target="_blank">doi.org/10.1103/PhysRevA.111.042429</a>).
 Congratulations to Yaqi!
